# OpenGLExploration

./: .gitignore  CMakeLists.txt
src/: camera.hpp  fragment.glsl  main.cpp  shader.hpp  vertex.glsl
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/shaders/: fragment.glsl  lightcubefragment.glsl  vertex.glsl
